--- a/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/01_databricks_lakehouse_intro.ipynb
@@ -232,7 +232,7 @@
     }
    },
    "source": [
-    "### Przykład 1.1: Porównanie tradycyjnej architektury vs Lakehouse\n",
+    "Porównanie tradycyjnej architektury vs Lakehouse\n",
     "\n",
     "**Cel:** Wizualizacja różnic między tradycyjnym podejściem (Data Lake + Data Warehouse) a Lakehouse.\n",
     "\n",
@@ -507,6 +507,116 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "b04ffdba-2d7b-4363-8c15-9312d59f107a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## 2.4 Repos i integracja z Git \n",
+    "\n",
+    "W praktyce praca z kodem w Databricks powinna opierać się o **Repos**, a nie o pojedyncze, osierocone notebooki w Workspace.\n",
+    "\n",
+    "Typowy workflow:\n",
+    "\n",
+    "1. **Utwórz repo** w Databricks: `Repos → Add Repo`.\n",
+    "2. **Połącz z Git** (GitHub / Azure DevOps / inne).\n",
+    "3. Pracuj na **branchach feature** (np. `feature/cleaning-module`).\n",
+    "4. Regularnie:\n",
+    "   - commituj i pushuj zmiany z Databricks do zdalnego repo,\n",
+    "   - twórz PR i merguj do main/dev.\n",
+    "\n",
+    "Dobre praktyki:\n",
+    "\n",
+    "- Jeden repo per projekt/domenę (np. `databricks-dea-training-kion`).\n",
+    "- Nie pracujemy w **Workspace root** – zawsze w `Repos`.\n",
+    "- Notebooki szkoleniowe, dane testowe i README mogą być w jednym repo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d3b97f4c-f2d7-476b-876c-03e662fc8258",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "## 2.5 Volumes vs DBFS – gdzie trzymać pliki?\n",
+    "\n",
+    "W nowych workspace'ach opartych na Unity Catalog preferowanym miejscem przechowywania plików są **Volumes**.\n",
+    "\n",
+    "- `dbfs:/` traktujemy jako warstwę **legacy** lub obszar pomocniczy.\n",
+    "- `volume://catalog.schema.volume_name` to w pełni zarządzany, kontrolowany przez UC obszar danych (uprawnienia, audit, lineage).\n",
+    "\n",
+    "Przykład definicji Volume (SQL):\n",
+    "\n",
+    "```sql\n",
+    "CREATE VOLUME IF NOT EXISTS ${catalog}.${schema}.training_volume\n",
+    "COMMENT 'Obszar roboczy na potrzeby szkoleń';\n",
+    "```\n",
+    "\n",
+    "Przykład użycia w PySpark:\n",
+    "\n",
+    "```python\n",
+    "catalog = dbutils.widgets.get(\"catalog\")\n",
+    "schema = dbutils.widgets.get(\"schema\")\n",
+    "\n",
+    "volume_path = f\"volume://{catalog}.{schema}.training_volume\"\n",
+    "display(dbutils.fs.ls(volume_path))\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "59fe7bbe-41c2-4fc0-8247-61dbd858854f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "## 2.6 Serverless SQL / SQL Warehouse – kiedy zamiast clustra notebookowego?\n",
+    "\n",
+    "Oprócz klastrów notebookowych Databricks oferuje **SQL Warehouse (serverless)** – silnik zapytań SQL zoptymalizowany pod BI i analitykę ad‑hoc.\n",
+    "\n",
+    "Kiedy używać:\n",
+    "- Raportowanie w Power BI / innych narzędziach BI.\n",
+    "- Analitycy biznesowi / power users, którzy pracują głównie w SQL.\n",
+    "- Interaktywne dashboardy i zapytania ad‑hoc do warstwy **Gold**.\n",
+    "\n",
+    "Różnice do all‑purpose cluster:\n",
+    "- Rozliczanie w oparciu o **DBU SQL** (inne stawki).\n",
+    "- Automatyczny provisioning / scaling.\n",
+    "- Izolacja obciążenia BI od klastrów inżynierskich.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "e0269415-6dda-473d-a771-236303dbe4c8",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -748,6 +858,37 @@
     "- Dokumentacja inline z Markdown\n",
     "- Operacje na plikach z %fs\n",
     "- Modularyzacja kodu z %run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "14084b35-dd2b-4bc3-abcb-b170d0e48117",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "## Monitoring i logowanie – gdzie szukać problemów?\n",
+    "\n",
+    "Przy pracy z klastrami i Jobami warto znać podstawowe miejsca, gdzie szukamy informacji diagnostycznych:\n",
+    "\n",
+    "- **Cluster → Event log** – start/stop clustra, autoscaling, błędy infrastruktury.\n",
+    "- **Spark UI** (zakładki Jobs, SQL, Storage, Environment) – plan wykonania, shufflowanie, błędy na poziomie zadań.\n",
+    "- **Driver / Executor logs** – szczegółowe stacktrace'y wyjątków Pythona/Scali.\n",
+    "- **Job Run page** – status poszczególnych tasków, retry, czas wykonania.\n",
+    "\n",
+    "Dobre praktyki:\n",
+    "- Przy dłuższych pipeline'ach zawsze sprawdzaj Spark UI (sekcja SQL/Jobs).\n",
+    "- Krytyczne logi aplikacyjne zapisuj do tabel Delta / storage, a nie tylko do logów clustra.\n"
    ]
   },
   {
@@ -1812,7 +1953,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6097486787422673,
+     "commandId": 7274734306713371,
      "dataframes": [
       "_sqldf"
      ]
