--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -501,6 +501,35 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "10f0f50b-3fa1-452a-85fd-f0df5773f08c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Rozszerzone opcje readera – typowe problemy produkcyjne\n",
+    "\n",
+    "W środowisku produkcyjnym często spotykamy pliki CSV z:\n",
+    "\n",
+    "- innym separatorem (`;` zamiast `,`),\n",
+    "- cudzysłowami wewnątrz pól,\n",
+    "- uszkodzonymi wierszami.\n",
+    "\n",
+    "Kluczowe opcje:\n",
+    "\n",
+    "- `delimiter` – niestandardowy separator kolumn,\n",
+    "- `quote` – znak otwierający/zamykający pola tekstowe,\n",
+    "- `escape` – sposób „ucieczki” znaków specjalnych,\n",
+    "- `mode` – sposób obsługi błędnych rekordów (`PERMISSIVE`, `DROPMALFORMED`, `FAILFAST`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -912,14 +941,7 @@
      "inputWidgets": {},
      "nuid": "a928b826-9d57-43ae-826a-f50d97830be8",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763581719698}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
