--- a/DZIEN_1_Fundamentals_Exploration/03_basic_transformations_sql_pyspark.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/03_basic_transformations_sql_pyspark.ipynb
@@ -772,6 +772,28 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8135f662-03c5-489f-a3bc-f0719879fe9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Null-e w agregacjach – na co uważać?\n",
+    "\n",
+    "Przy agregacjach warto pamiętać, że:\n",
+    "\n",
+    "- `COUNT(*)` liczy wszystkie wiersze,\n",
+    "- `COUNT(kolumna)` liczy tylko wiersze, gdzie `kolumna IS NOT NULL`,\n",
+    "- `COUNT(DISTINCT kolumna)` liczy unikalne wartości **niepuste**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -2697,7 +2719,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6097486787422760,
+     "commandId": 7433496500350564,
      "dataframes": [
       "_sqldf"
      ]
