--- a/DZIEN_1_Fundamentals_Exploration/05_views_workflows.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/05_views_workflows.ipynb
@@ -1314,6 +1314,78 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c168cf5e-fac5-4b84-96b1-91291e615ec6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Tworzenie prostego Job’a w UI – krok po kroku\n",
+    "\n",
+    "1. Przejdź do **Workflows → Jobs** i kliknij **Create Job**.\n",
+    "2. Nazwij Job, wybierz typ taska **Notebook** i wskaż notebook (np. pipeline Bronze→Silver→Gold).\n",
+    "3. Wybierz cluster:\n",
+    "   - istniejący all-purpose (dev), albo\n",
+    "   - nowy job cluster z odpowiednim Databricks Runtime.\n",
+    "4. (Opcjonalnie) dodaj **parametry**:\n",
+    "   - job parameters,\n",
+    "   - lub mapowanie na widgety w notebooku (`dbutils.widgets.get`).\n",
+    "5. Skonfiguruj **schedule** (np. codziennie o 07:00) lub pozostaw uruchamianie ręczne.\n",
+    "6. Ustaw **Retry** (np. 2–3 próby) oraz ewentualny **timeout**.\n",
+    "\n",
+    "Po pierwszych uruchomieniach:\n",
+    "\n",
+    "- obserwuj czas wykonania,\n",
+    "- zaglądaj do Spark UI,\n",
+    "- sprawdzaj liczbę rekordów między warstwami (Bronze/Silver/Gold)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7365e3a1-9fa6-4077-b081-e399f6037ca4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Gdzie szukać logów i szczegółów wykonań Jobów?\n",
+    "\n",
+    "Po uruchomieniu Databricks Jobów najważniejsze miejsca diagnostyczne:\n",
+    "\n",
+    "1. **Job run details (Jobs → konkretny run)**:\n",
+    "   - status poszczególnych tasków,\n",
+    "   - czas wykonania,\n",
+    "   - liczba retry,\n",
+    "   - powiązany cluster.\n",
+    "\n",
+    "2. **Spark UI**:\n",
+    "   - zakładka **SQL** – plany wykonania zapytań,\n",
+    "   - zakładka **Jobs** – DAG zadań Spark,\n",
+    "   - zakładka **Storage** – cache / shuffle,\n",
+    "   - zakładka **Environment** – konfiguracja clustra i aplikacji.\n",
+    "\n",
+    "3. **Driver / Executor logs**:\n",
+    "   - szczegółowe stacktrace’y wyjątków Pythona/Scali,\n",
+    "   - logi aplikacyjne.\n",
+    "\n",
+    "Dobre praktyki:\n",
+    "\n",
+    "- Przy krytycznych pipeline’ach ETL zawsze sprawdzaj Spark UI przynajmniej przy pierwszych wdrożeniach.\n",
+    "- Jeśli Job kończy się statusem `SUCCESS`, ale dane wyglądają podejrzanie – porównaj liczbę wierszy i proste agregaty między warstwami."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
