--- a/DZIEN_2_Lakehouse_Delta_Lake/02_batch_data_ingestion.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_batch_data_ingestion.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf93fa3c",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ca99596-2bd8-4fcd-9d2a-b4ae51b48e94",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Batch Data Ingestion - Demo\n",
     "\n",
@@ -20,8 +31,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96932257",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "510deaa9-5253-48d2-b8fc-35af59828ccf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -35,8 +57,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4dd1ae",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "58fc711e-377f-4369-a513-3ff5e77dbe2c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny\n",
     "\n",
@@ -58,17 +91,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7356e5e5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7ae8b30f-35dc-424a-8e88-a5114a531313",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "787040ef",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1d3bde39-850f-4171-a54b-b7b0c6e58d4b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -76,43 +131,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1718235",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "85d0f0e5-dd6b-454e-a94e-cb51fbbbee9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ef3d986",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "880de8de-0642-461e-9d67-7f01157099aa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql.types import *\n",
+    "from datetime import datetime\n",
     "\n",
-    "# Kontekst użytkownika\n",
+    "# Ścieżki do danych\n",
+    "CUSTOMERS_CSV = f\"{DATASET_BASE_PATH}/customers/customers.csv\"\n",
+    "ORDERS_JSON = f\"{DATASET_BASE_PATH}/orders/orders_batch.json\"\n",
+    "PRODUCTS_PARQUET = f\"{DATASET_BASE_PATH}/products/products.parquet\"\n",
+    "\n",
+    "# Wyświetl kontekst użytkownika (zmienne z 00_setup)\n",
     "print(\"=== Kontekst użytkownika ===\")\n",
     "print(f\"Katalog: {CATALOG}\")\n",
     "print(f\"Schema Bronze: {BRONZE_SCHEMA}\")\n",
     "print(f\"Schema Silver: {SILVER_SCHEMA}\")\n",
+    "print(f\"Schema Gold: {GOLD_SCHEMA}\")\n",
     "print(f\"Użytkownik: {raw_user}\")\n",
     "\n",
-    "# Ustaw katalog i schemat\n",
+    "# Ustaw katalog i schemat jako domyślne\n",
     "spark.sql(f\"USE CATALOG {CATALOG}\")\n",
     "spark.sql(f\"USE SCHEMA {BRONZE_SCHEMA}\")\n",
     "\n",
-    "print(f\"\\n=== Ścieżki do danych ===\")\n",
-    "print(f\"Customers CSV: {CUSTOMERS_CSV}\")\n",
-    "print(f\"Orders JSON: {ORDERS_JSON}\")\n",
-    "print(f\"Products Parquet: {PRODUCTS_PARQUET}\")"
+    "print(f\"\\n Domyślny katalog: {CATALOG}\")\n",
+    "print(f\" Domyślny schemat: {BRONZE_SCHEMA}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d8f3c3a6",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d272cdf9-3397-46ba-b23f-f6126965c1ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -128,17 +221,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b1eddf",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "94e15d5b-8587-4c5f-8e6a-f81fab33cbe6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.1: COPY INTO z CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d53949ce",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4ccbb0c2-e568-40d2-a6eb-bcb71d8e897b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - COPY INTO from CSV\n",
@@ -202,8 +317,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3823c01",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8e685bea-f5e5-4bb2-8fc9-549b632269fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Idempotency Test:**\n",
     "\n",
@@ -212,8 +338,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d519bd3",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e15e3b58-2856-4790-aee8-2f0c33e3894e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -229,17 +366,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b153973c",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "facdb15f-157f-4348-b680-131ab8639c03",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.1: COPY INTO z JSON + audit columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69e09f76",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "566b961a-0006-48de-a913-4a07d60e7f74",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.1 - COPY INTO from JSON\n",
@@ -304,8 +463,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d459caf",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d8344704-0be6-43d7-80a4-39d7d5fe21a6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Audit Columns:**\n",
     "\n",
@@ -317,8 +487,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89682ce2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "05257fa3-95bd-4c80-a583-ea37bfdb061e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -334,17 +515,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26a36b4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b4f97469-1453-417c-a3fe-7bba82d57cdf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.1: COPY INTO z Parquet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e12279a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "71aa348d-0aa3-4cfc-bbc1-16c2fc12965d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.1 - COPY INTO from Parquet\n",
@@ -399,8 +602,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db39224",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fb049fa9-b1e7-4255-a022-8ec9a981a469",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Performance Parquet vs CSV/JSON:**\n",
     "\n",
@@ -414,8 +628,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0697b49",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "49fe7841-1d3a-439c-a6fb-49f006134232",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -439,17 +664,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f567fbe7",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f1951e3b-d8f5-4c62-ae44-3a9e3850c553",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.1: Schema Inference vs Explicit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7151b619",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "844e42d3-caf5-478e-8fa5-890d7d4a0c52",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.1 - Schema Inference vs Enforcement\n",
@@ -494,8 +741,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3f2d5a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a7bc3d2-5566-4588-bceb-34d98866bc40",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -516,17 +774,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4f35d8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7a1e1d3f-c299-4ba5-9428-9204fadd1d0e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 5.1: Error Handling z badRecordsPath"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a642ea7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5f804da3-5855-45a3-bb89-ac8d70dd03da",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 5.1 - Error Handling z badRecordsPath\n",
@@ -562,14 +842,14 @@
     "\"\"\")\n",
     "\n",
     "# Wczytaj z error handling\n",
-    "df_with_errors = (spark.read\n",
-    "  .format(\"csv\")\n",
-    "  .option(\"header\", \"true\")\n",
-    "  .option(\"mode\", \"PERMISSIVE\")\n",
-    "  .option(\"columnNameOfCorruptRecord\", \"_corrupt_record\")\n",
-    "  .option(\"badRecordsPath\", BAD_RECORDS_PATH)\n",
-    "  .load(CUSTOMERS_CSV)\n",
-    "  .withColumn(\"_ingestion_timestamp\", F.current_timestamp())\n",
+    "df_with_errors = (\n",
+    "    spark.read\n",
+    "    .format(\"csv\")\n",
+    "    .option(\"header\", \"true\")\n",
+    "    .option(\"columnNameOfCorruptRecord\", \"_corrupt_record\")\n",
+    "    .option(\"badRecordsPath\", BAD_RECORDS_PATH)\n",
+    "    .load(CUSTOMERS_CSV)\n",
+    "    .withColumn(\"_ingestion_timestamp\", F.current_timestamp())\n",
     ")\n",
     "\n",
     "df_with_errors.write.mode(\"overwrite\").saveAsTable(TABLE_ERRORS)\n",
@@ -595,8 +875,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21edeb43",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dde20c8e-c2a0-467f-a89b-0596ea387adb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -618,17 +909,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "430f15ce",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c9a3f17c-9d4f-4aaf-94d8-1cdad169cf8a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 6.1: CTAS dla agregacji"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70850ed2",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "65f08354-972b-401f-bc95-d73f0c85f8d5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 6.1 - CTAS dla agregacji\n",
@@ -665,17 +978,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c676ce0e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "45fc62ee-2f31-48eb-a703-2fea5cc6a7d7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 6.2: CTAS Bronze → Silver (data quality)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c21463ee",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "efeb8409-5bd2-494b-9b79-edb460cee95b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 6.2 - CTAS Bronze → Silver transformation\n",
@@ -737,8 +1072,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36f0cb5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a3b96bf1-dc49-40c4-b916-f8d398915d90",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -802,8 +1148,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77ce0ebc",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8676a216-06ac-43a6-95a9-355b3f4bcd77",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -870,8 +1227,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3fc958",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9c7b59b3-50ac-40de-a0a3-eaf637a7b175",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -882,9 +1250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "672a9a88",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f4fd57bb-5b3d-44ef-a0db-a26563adb21e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Cleanup - usuń tabele demo\n",
@@ -918,10 +1297,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "02_batch_data_ingestion",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
