--- a/DZIEN_2_Lakehouse_Delta_Lake/04_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_medallion_architecture.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "123ab80f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fb6d571c-ebfe-44a0-908e-8079cd0e7cf3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Medallion Architecture: Bronze → Silver → Gold Pipeline - Demo\n",
     "\n",
@@ -23,8 +34,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f36d0e4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4d54ecb3-6758-4504-b2d9-e38d7067126e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -44,8 +66,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc5afb8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4698a3de-470f-41c4-a11a-5dbec2b244a0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny - Medallion Architecture\n",
     "\n",
@@ -345,8 +378,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf883f8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70768a08-3efd-458d-b186-e11c7a6372f9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik\n",
     "\n",
@@ -355,9 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ea85a738",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2beb7c6c-feee-4484-8a79-ce93f91916b7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -365,8 +420,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8374898b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9434034c-106e-4069-b478-88abd48f1594",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja\n",
     "\n",
@@ -375,9 +441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6ffa85d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "523e2bef-ff77-470c-a1ee-0038087a9919",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
@@ -407,8 +484,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ae7e5f2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0552d1fb-1052-45c6-bb26-944b565508d4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 1: Bronze Layer - Raw Data Landing\n",
     "\n",
@@ -479,8 +567,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2beff1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e23da394-d79a-4736-850e-ab58bc53ec44",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.1: Inspekcja Bronze Layer\n",
     "\n",
@@ -489,9 +588,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2357eb66",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e68753ed-8a49-491d-ad72-d1f64520217e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Convert SQL table creation to PySpark DataFrame write operations\n",
+    "\n",
+    "customers_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_batch\")\n",
+    "customers_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.customers_raw\")\n",
+    "\n",
+    "orders_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_batch\")\n",
+    "orders_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.orders_raw\")\n",
+    "\n",
+    "products_df = spark.table(f\"{CATALOG}.{BRONZE_SCHEMA}.products_batch\")\n",
+    "products_df.write.mode(\"overwrite\").saveAsTable(f\"{CATALOG}.{BRONZE_SCHEMA}.products_raw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cf979d26-91e7-44e4-b426-b573656a2b60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Inspekcja Bronze Layer\n",
@@ -531,8 +672,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "609f9ff1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d1b7d116-87c4-44f0-9790-54bc9ef7417f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 2: Silver Layer - Cleansing & Validation\n",
     "\n",
@@ -650,8 +802,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "740a9835",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9464d305-e7d7-4cc8-8553-d31e08fbc43f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.1: Bronze → Silver Transformation (Orders)\n",
     "\n",
@@ -660,9 +823,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3eb73e78",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3788a6a3-beac-48bc-8bae-5c536d87c206",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.1 - Bronze → Silver: Orders\n",
@@ -678,7 +852,7 @@
     "    # Parse & Cast\n",
     "    .withColumn(\"order_id\", F.col(\"order_id\").cast(\"bigint\"))\n",
     "    .withColumn(\"customer_id\", F.col(\"customer_id\").cast(\"bigint\"))\n",
-    "    .withColumn(\"order_date\", F.to_timestamp(F.col(\"order_date\"), \"yyyy-MM-dd HH:mm:ss\"))\n",
+    "    .withColumn(\"order_datetime\", F.to_timestamp(F.col(\"order_datetime\"), \"yyyy-MM-dd HH:mm:ss\"))\n",
     "    .withColumn(\"total_amount\", F.col(\"total_amount\").cast(\"decimal(10,2)\"))\n",
     "    .withColumn(\"payment_method\", F.upper(F.trim(F.col(\"payment_method\"))))\n",
     "    \n",
@@ -687,7 +861,7 @@
     "        F.when(\n",
     "            (F.col(\"order_id\").isNotNull()) &\n",
     "            (F.col(\"customer_id\").isNotNull()) &\n",
-    "            (F.col(\"order_date\").isNotNull()) &\n",
+    "            (F.col(\"order_datetime\").isNotNull()) &\n",
     "            (F.col(\"total_amount\") > 0),\n",
     "            True\n",
     "        ).otherwise(False)\n",
@@ -698,7 +872,7 @@
     "    \n",
     "    # Select & order columns\n",
     "    .select(\n",
-    "        \"order_id\", \"customer_id\", \"order_date\", \n",
+    "        \"order_id\", \"customer_id\", \"order_datetime\", \n",
     "        \"total_amount\", \"payment_method\",\n",
     "        \"_is_valid\", \"_processing_timestamp\"\n",
     "    )\n",
@@ -723,8 +897,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9515638f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "374501e7-a2e0-471b-944c-76dfe5085199",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 3: SCD (Slowly Changing Dimensions)\n",
     "\n",
@@ -967,8 +1152,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c805dc",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d9749366-4468-48ca-a120-2b9c5d49e2ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.1: SCD Type 1 - Customers (Overwrite)\n",
     "\n",
@@ -977,9 +1173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d72a0d65",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f1275366-9948-4eb1-b51f-c05361925ba8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.1 - SCD Type 1: Customers\n",
@@ -1059,8 +1266,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952d19cf",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "85dd1603-be26-43f4-a11c-a5b63916563b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.2: SCD Type 2 - Customers (Historical Tracking)\n",
     "\n",
@@ -1069,9 +1287,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23830a71",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c946d8d2-f9a3-4c96-a02b-2a5e62db1c3c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.2 - SCD Type 2: Customers (Historical)\n",
@@ -1217,8 +1446,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b46986",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8cb23f29-f3a5-4c11-a47e-7a65b3ad44d2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 4: Gold Layer - Business Aggregates & Analytics\n",
     "\n",
@@ -1313,8 +1553,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae09388d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ca9f9c7f-f53f-4d3b-813b-e6a3524b2974",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.1: Gold - Daily Sales Summary\n",
     "\n",
@@ -1323,9 +1574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e73dcac8",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2ca302cc-5126-4368-a0a9-fd63e8fc27c4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.1 - Gold: Daily Sales Summary\n",
@@ -1383,8 +1645,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07b4da5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7b567a9e-ec08-4042-9973-28c9117a90ba",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.2: Gold - Customer 360 (Denormalized)\n",
     "\n",
@@ -1393,9 +1666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "97c66438",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1aa72ab7-4a44-4fc8-9440-6cad937d403b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.2 - Gold: Customer 360\n",
@@ -1467,8 +1751,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "225f55a0",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "039dde8f-ea44-43e0-97bd-f628e4969004",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 5: Podsumowanie & Best Practices\n",
     "\n",
@@ -1610,8 +1905,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41bffd95",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1e58748e-1fd8-4de1-86ff-8e3e13e32eb0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 6: Czyszczenie Zasobów\n",
     "\n",
@@ -1622,9 +1928,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0e1610b2",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "92ef54ea-b672-4608-a9bc-847251e33b02",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Opcja 1: Sprawdź utworzone zasoby\n",
@@ -1665,8 +1982,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4956ba",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5dea6788-3610-410f-a222-6962f3f01fc1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Opcja 2: Usuń wszystkie zasoby (tylko jeśli naprawdę chcesz)\n",
     "\n",
@@ -1675,9 +2003,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ada7b158",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6409dd7e-5b44-4ca7-9aba-e089f8b849d1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Opcja 2: Usuń wszystkie zasoby (TYLKO JEŚLI JESTEŚ PEWIEN!)\n",
@@ -1718,10 +2057,28 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": -1,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "04_medallion_architecture",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
