--- a/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/05_optimization_best_practices.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d85916d2",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "23cffde0-db08-4560-8121-7f59b784a13f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Optymalizacja i najlepsze praktyki - Demo\n",
     "\n",
@@ -20,8 +31,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9590f110",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0dfc4662-9aaa-4a92-8d26-2ebb05cfa80c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -37,8 +59,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715c1cd8",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9200a175-242b-4dc7-acd4-288781f4e3df",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny\n",
     "\n",
@@ -64,8 +97,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "962e041a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "00ee9b43-acbf-4216-a499-8bea3d48739b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik\n",
     "\n",
@@ -74,9 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61b221a3",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a250c520-ae2e-4004-b2d6-f2994e411e6c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -84,8 +139,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4a1282",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6163cff-16e5-44b6-9cce-a3bf932fe679",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja\n",
     "\n",
@@ -94,9 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "932d26bf",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7a0cc155-45ac-4679-bf40-0efeb89e7b09",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
@@ -127,8 +204,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3d7ef73",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6bd499c1-678e-463f-9081-7ef9b14301c1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 1: Analiza planu fizycznego (explain())\n",
     "\n",
@@ -150,17 +238,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1f59a26",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "918895ad-596e-4f57-bdb7-05d587e80952",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.1: Analiza planu prostego zapytania"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5811f687",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6531acdf-98d5-45d5-a312-5f369f2fa2ef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Analiza planu prostego zapytania\n",
@@ -187,8 +297,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da671a4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0d9af332-8c17-4825-9496-b9029a9421ad",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.2: Predicate Pushdown w praktyce\n",
     "\n",
@@ -197,9 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20c71c41",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "73394fb4-ff75-4f2d-aae5-1f68db484ec6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.2 - Predicate Pushdown\n",
@@ -226,8 +358,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b90dcc",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3a51281f-4f44-4ea6-82f2-996f7edaee07",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 2: Strategia partycjonowania\n",
     "\n",
@@ -247,17 +390,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ed19eb",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e0665d14-7df4-4304-b215-ad5531b8a72a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.1: Tworzenie tabeli partycjonowanej"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a945c5a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c00e19ec-cf42-486f-be1f-0082e1e602d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.1 - Tworzenie tabeli partycjonowanej\n",
@@ -291,17 +456,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe25248",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "26ef8762-1a93-41d5-83af-0545643857ee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.2: Partition Pruning w działaniu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be9c85c9",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e30be36f-2a13-44f8-85a8-05c76566b45a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.2 - Partition Pruning\n",
@@ -336,8 +523,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e939e1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8db85bc0-8aa8-4630-9e18-69e5530fea96",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 3: Small Files Problem\n",
     "\n",
@@ -362,17 +560,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00a401a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "965ad450-5f1a-4e33-ac31-ba922037d071",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.1: Symulacja Small Files Problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99641520",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "22a608c1-9ec7-43a3-9b0b-abfd0658aebd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.1 - Symulacja Small Files Problem\n",
@@ -407,17 +627,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b46bd9b",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6d568f02-9857-4fa2-bbdd-ef467fa13477",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.2: Rozwiązanie - OPTIMIZE i Auto Compaction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66c2de54",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d8d3c587-4607-41fa-b0db-3e1ab0774a60",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.2 - Rozwiązanie Small Files Problem\n",
@@ -457,8 +699,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83482fb7",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "38c75d4e-fc27-4cfc-b053-d93b48b5baef",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Sekcja 4: ZORDER BY - Advanced Clustering\n",
     "\n",
@@ -483,17 +736,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8632b9db",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "da4d32df-ebbe-427d-ba8c-720d1006449c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.1: ZORDER BY dla często filtrowanych kolumn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27f7de3d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56c5e7c6-4377-40d4-9e18-46ff53c6a9e3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.1 - ZORDER BY\n",
@@ -526,17 +801,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d0e64b4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dc6cc295-74eb-4af8-b88c-07402191fa62",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 4.2: Pomiar skuteczności ZORDER - Data Skipping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4de7cbbb",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dc56cf1a-23cd-4ede-aa44-64333b3af744",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 4.2 - Pomiar skuteczności ZORDER\n",
@@ -573,8 +870,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e05384",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c1ca93de-4605-4f85-8401-a40985237e12",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Best Practices - Przewodnik optymalizacji\n",
     "\n",
@@ -606,8 +914,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d1f76f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "59f7365e-c56b-49d8-8b5c-f76a13678b8e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Troubleshooting - Diagnoza problemów wydajnościowych\n",
     "\n",
@@ -655,8 +974,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccde084f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6ca92322-c50a-41aa-8a24-007833c526ca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Podsumowanie\n",
     "\n",
@@ -703,8 +1033,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac00033c",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c6d22f78-2445-487b-931a-e6eb94f7209c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Cleanup\n",
     "\n",
@@ -713,9 +1054,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "085aafd6",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c5b1ec66-98c3-49a5-a03a-8a180a2958a3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Cleanup - usuń tabele demo\n",
@@ -732,10 +1084,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "05_optimization_best_practices",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
