--- a/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "718d00c5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5fd1a87c-cd8e-4a08-ad1b-6d6f1f8868d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Demo 1: Zaawansowane Transformacje PySpark\n",
     "\n",
@@ -27,17 +38,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea713080",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0b69e11d-d78e-4f04-a6ee-3327dad47372",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Inicjalizacja środowiska"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ba7febe",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f8aef95f-dff9-4b39-96d7-283fd9f20f53",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -45,8 +78,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b813e4a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6a13e834-3940-4988-80b9-007afb201461",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -70,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "260822ea",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "11155441-c8b0-44b7-a5f4-2a4ea8afb75c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import Window\n",
@@ -115,8 +170,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5f44541",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "02bf8ba2-6133-43a5-b880-b42ccc2e5077",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1: Ranking - row_number, rank, dense_rank\n",
     "\n",
@@ -128,9 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41c829d5",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3376d4c5-9265-4cae-9179-7fc9dda76dd5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Ranking zamówień dla każdego klienta według kwoty (malejąco)\n",
@@ -145,8 +222,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90393637",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "989a42c9-cd77-4018-8e5f-4b313070f627",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2: Funkcje lag i lead\n",
     "\n",
@@ -161,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f85b5af",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "af44cf08-e562-40e1-ad34-3745d650af65",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Porównanie z poprzednim i następnym zamówieniem\n",
@@ -181,8 +280,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9036a7",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "64d0dcf6-33d7-440f-9b01-0d59f84d6791",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -201,9 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cce1849",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8c4a2196-f6dd-492a-a068-058b7c99f84e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Rolling sum - suma krocząca (wszystkie poprzednie + bieżący)\n",
@@ -221,9 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d55a6f1",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "655539bb-2e88-4d2f-a86e-01adcc13e2d6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Moving average - średnia krocząca z 3 ostatnich zamówień\n",
@@ -242,8 +374,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc0b89d9",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d157c9ef-0d54-468c-8c46-5525b78884a8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -262,9 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "820bd764",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "be97f6e2-27a7-4bc1-b9a1-fe1525f38cbd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Produkty w zamówieniach (array)\n",
@@ -290,9 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "629f13e1",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a02f071a-6650-4f6e-bd89-9a9db79a8f13",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# explode() - rozwija tablicę do osobnych wierszy\n",
@@ -309,9 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea3c25a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "301c1126-c9f1-456e-b371-840d7531c350",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# posexplode() - rozwija tablicę z numerem pozycji\n",
@@ -328,8 +504,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc3c775f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "96f77a42-a626-42cc-8347-1b54ef60ea7d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Praktyczny przykład: Analiza koszyka zakupowego\n",
     "\n",
@@ -342,9 +529,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "add37719",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "71211b5d-92e0-4122-8513-15754d5e348f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Dane: Zamówienia z produktami, cenami i kategoriami\n",
@@ -400,9 +598,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "427b334a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fe12ba0c-cf0d-47a4-bb9b-b19cfa5c90cf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Krok 1: explode() - rozwój zagnieżdżonych produktów\n",
@@ -433,9 +642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c7a60ad",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e7eb5cc7-e866-4be2-87d8-d9a2e96c10a3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Analiza 1: Top 5 najpopularniejszych produktów\n",
@@ -468,11 +688,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8276ffda",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3ef46c13-250c-4d71-b854-f44fbcd20d27",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
+    "from pyspark.sql.functions import when\n",
+    "\n",
     "# Analiza 3: Metryki koszyka zakupowego per zamówienie\n",
     "print(\"🛒 Metryki koszyka zakupowego:\")\n",
     "basket_metrics = basket_exploded \\\n",
@@ -506,9 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15dfbdbf",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ed984eca-2fdf-411a-99f0-e6b14555f7dc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Analiza 4: Market Basket Analysis - produkty kupowane razem\n",
@@ -555,8 +799,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9033254",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ca539295-4985-4590-8d77-e71968cace43",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### 💡 Kluczowe wnioski z przykładu\n",
     "\n",
@@ -580,8 +835,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bf6393",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "27c97dec-edb8-41bb-909f-6081ede0828e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### sequence() - generowanie sekwencji\n",
     "\n",
@@ -595,9 +861,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46f20298",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3d3c3c3f-274a-4687-9232-633aac9c3b17",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Generowanie sekwencji dni między datami\n",
@@ -632,8 +909,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede36a7d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "957c22ae-0789-4d0a-b647-ae76b14ad045",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -653,9 +941,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "45cacbae",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4453a20c-48f2-46fd-849b-95d186761fac",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Parsowanie JSON payload\n",
@@ -673,9 +972,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c3e333d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "21e9b4e2-0767-4a64-9408-367b313a0d02",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Automatyczne wykrycie schematu JSON\n",
@@ -691,9 +1001,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e49453d",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "910bd74d-e688-4af7-a8a5-11b2b1a974f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Wyciąganie pól z zagnieżdżonego JSON\n",
@@ -711,8 +1032,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5a956f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "28f568a9-a3fc-4cb6-9552-103c26bbda35",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -736,9 +1068,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb239309",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9bc86acb-c3e1-4c5d-a658-38710fb1145e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import datediff, months_between, year, month, dayofweek, quarter\n",
@@ -758,9 +1101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "13da278a",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4a5cdc74-6b32-4bb3-a54a-67ecc4a1ad7c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład: Obliczanie okresów między zamówieniami\n",
@@ -778,8 +1132,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2eda50d",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a91d97d5-6a9f-4d67-920f-ed443225410e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -796,9 +1161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e66cdee",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f74630fe-2e05-4870-ae8b-78ae9e91dbbf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Kompleksowa analiza zachowań klientów\n",
@@ -823,8 +1199,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a63a84",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a52c2616-c6b3-44ea-9ab9-86692b2a3f72",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -871,10 +1258,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "01_advanced_pyspark_transformations",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
